anadir tests y comentarios us36

--- a/Vostok/templates/crear_material.html
+++ b/Vostok/templates/crear_material.html
@@ -1,4 +1,4 @@
-<!-- ######## US36 ######## -->
+<!-- ######## VIEW US36 ######## -->
 
 <form method="post" novalidate>
   {% csrf_token %}
@@ -7,4 +7,4 @@
 </form>
 
 
-<!-- ######## US36 ######## -->
+<!-- ######## VIEW US36 ######## -->
