--- a/Vostok/templates/index.html
+++ b/Vostok/templates/index.html
@@ -1,22 +1,11 @@
 <!-- Template US-14 -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<div class="jumbotron">
-    <h1>My fake blog!</h1>
-    {% if user.is_authenticated %}
-      <p>Logged as {{ user.username }}</p>
-    {% else %}
-      <a class="btn btn-primary" href="#">
-        Login
-      </a>
-    {% endif %}
-  </div>
+{% extends 'dashboard/base.html' %}
 
-</body>
-</html>
+{% load staticfiles %}
+
+{% block content %}
+    <h1>Logged as</h1>
+    <h3>{{ user.username }}</h3>
+
+{% endblock %}
 <!-- Template US-14 -->
