--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -1,22 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'dashboard/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <!-- Bootstrap-->
-   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Bootstrap-->
-</head>
-<body>
+{% load staticfiles %}
+{% block content %}
     <!--  Template US-4  -->
-     <div class="container">
+         <div class="container">
     {% if user.is_authenticated %}
-
+    <div class="container-fluid">
     <h1> <i class="zmdi zmdi-shape"> </i>Ver Inventario </h1>
 
 
@@ -43,10 +32,11 @@
     </tbody>
     </table>
     </div>
+        <button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light">Añadir</button>
+        </div>
 
 {% else %}
     <h1>No estas autenticado</h1>
 {% endif %}
 
-</body>
-</html>
+{% endblock %}
