--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -1,3 +1,4 @@
+<!--######VIEW US38 #######-->
 {% extends 'dashboard/base.html' %}
 
 {% load staticfiles %}
@@ -67,4 +68,6 @@
 
 
         {% endblock %}
+
+<!--######VIEW US38 #######-->
 
