--- a/Vostok/dashboard/templates/dashboard/base.html
+++ b/Vostok/dashboard/templates/dashboard/base.html
@@ -35,6 +35,10 @@
         <link href="{% static 'dashboard//css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
         <link href="{% static 'dashboard/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
         <link href="{% static 'dashboard/css/app.min.css' %}" rel="stylesheet" type="text/css" />
+
+        <link href="{% static 'dashboard/css/custom.css' %}" rel="stylesheet" type="text/css" />
+
+
     </head>
 
     <body>
