--- a/Vostok/dashboard/templates/dashboard/base.html
+++ b/Vostok/dashboard/templates/dashboard/base.html
@@ -31,6 +31,8 @@
         <link href="{% static 'dashboard/libs/bootstrap-datepicker/bootstrap-datepicker.css' %}" rel="stylesheet">
         <link href="{% static 'dashboard/libs/bootstrap-daterangepicker/daterangepicker.css' %}" rel="stylesheet">
 
+        <link href="{% static 'dashboard/libs/custombox/custombox.min.css' %}" rel="stylesheet">
+
         <!-- App css -->
         <link href="{% static 'dashboard//css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
         <link href="{% static 'dashboard/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
@@ -538,6 +540,10 @@
         ============================-->
         <!-- Vendor js -->
         <script src="{% static 'dashboard/js/vendor.min.js' %}"></script>
+
+
+        <!-- Modal js -->
+        <script src="{% static 'dashboard/libs/custombox/custombox.min.js' %}"></script>
 
         <!-- Plugins Js -->
         <script src="{% static 'dashboard/libs/bootstrap-tagsinput/bootstrap-tagsinput.min.js' %}"></script>
