--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -2,41 +2,80 @@
 
 {% load staticfiles %}
 {% block content %}
-    <!--  Template US-4  -->
+    <!--  ########View US04#######  -->
+    <!--  ########View US03#######  -->
          <div class="container">
     {% if user.is_authenticated %}
-    <div class="container-fluid">
-    <h1> <i class="zmdi zmdi-shape"> </i>Ver Inventario </h1>
+        <div class="container-fluid">
+        <h1> <i class="zmdi zmdi-shape"> </i>Ver Inventario </h1>
 
 
-    <table class="table table-hover table-dark">
-      <thead>
-        <tr>
-          <th scope="col">id</th>
-          <th scope="col">Nombre</th>
-        </tr>
-      </thead>
-    <tbody>
+        <table class="table table-hover table-dark">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Nombre</th>
+              <th scope="col">Ajustes</th>
+            </tr>
+          </thead>
+        <tbody>
 
-    {% for Inventario in inventarios %}
+        {% for Inventario in inventarios %}
 
-        <tr>
-          <th scope="row">{{ Inventario.id }}</th>
-          <td>{{ Inventario.nombre }}</td>
+            <tr>
+              <th scope="row">{{ Inventario.id }}</th>
+              <td>{{ Inventario.nombre }}</td>
+                <td>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-secondary dropdown-toggle waves-effect" data-toggle="dropdown" aria-expanded="false"> <i class="mdi mdi-chevron-down"></i> </button>
+                        <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 38px, 0px); top: 0px; left: 0px; will-change: transform;">
+                            <!-- item-->
+                            <a href="javascript:void(0);" class="dropdown-item">Editar</a>
+                            <!-- item-->
+                            <a href="#delete-modal-{{ Inventario.id }}" class="dropdown-item" data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a">Eliminar</a>
+                        </div>
+                    </div>
+                </td>
+            </tr>
 
-        </tr>
-
-
-    {% endfor %}
-    <!--  Template US-4  -->
-    </tbody>
-    </table>
-    </div>
-        <button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light">Añadir</button>
+        {% endfor %}
+        <!--  ########View US03#######  -->
+        <!--  ########View US04####### -->
+        </tbody>
+        </table>
+        </div>
+            <a href="/inventario/crear/"><button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light">Añadir></button></a>
         </div>
 
-{% else %}
-    <h1>No estas autenticado</h1>
-{% endif %}
+        <!-- ##########View US03##### -->
+        {% for Inventario in inventarios %}
 
-{% endblock %}
+            <div id="delete-modal-{{ Inventario.id }}" class="modal-demo">
+            <button type="button" class="close" onclick="Custombox.modal.close();">
+                <span>×</span><span class="sr-only">Close</span>
+            </button>
+            <h4 class="custom-modal-title">Eliminar el inventario <span>{{ Inventario.nombre }}</span>?</h4>
+            <div class="custom-modal-text">
+                Quieres eliminar el inventario {{ Inventario.nombre }} permanentemente?
+                <form action="#" data-parsley-validate="" novalidate="">
+                    <div class="form-group text-right mb-0">
+                        <button class="btn btn-danger waves-effect waves-light mr-1" type="submit">
+                            <a href="{% url "inventario:delete_inventario" Inventario.id %}">Eliminar</a>
+                        </button>
+                        <button type="reset" class="btn btn-secondary waves-effect waves-light" onclick="Custombox.modal.close();">
+                            Cancelar
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        {% endfor %}
+
+
+
+    {% else %}
+    <h1>No estas autenticado</h1>
+    {% endif %}
+
+    {% endblock %}
