--- a/Vostok/dashboard/static/dashboard/css/app-rtl.css
+++ b/Vostok/dashboard/static/dashboard/css/app-rtl.css
@@ -2098,7 +2098,7 @@ body.boxed-layout {
   min-height: 100px; }
 
 body.authentication-bg {
-  background-image: url("../images/big/bg.jpg");
+  background-image: url("../images/big/ambulance.jpg");
   background-size: cover;
   background-position: center; }
 
