--- a/Vostok/users/templates/users/login.html
+++ b/Vostok/users/templates/users/login.html
@@ -1,19 +1,79 @@
 <!-- Template US-14 -->
+
+
+<!-- Template US-14 -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<div class="jumbotron">
-    <h1>My fake blog!</h1>
+{% load static %}
+{% load staticfiles %}
+    <head>
+        <meta charset="utf-8" />
+        <title>Rescate I. Inicia Sesion</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
+        <meta content="Coderthemes" name="author" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <!-- App favicon -->
+       <link rel="shortcut icon" href="{% static 'dashboard/images/favicon.ico' %}">
 
-      <a class="btn btn-primary" href="{% url 'social:begin' 'google-oauth2' %}">
-        Login
-      </a>
-  </div>
+        <!-- App css -->
+        <link href="{% static 'dashboard//css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'dashboard/css/icons.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'dashboard/css/app.min.css' %}" rel="stylesheet" type="text/css" />
 
-</body>
+    </head>
+
+
+    <body class="authentication-bg" >
+
+        <div class="home-btn d-none d-sm-block">
+{#            <a href="index.html"><i class="fas fa-home h2 text-dark"></i></a>#}
+        </div>
+
+        <div class="account-pages mt-5 mb-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-8 col-lg-6 col-xl-5" style="padding-top: 10em;">
+{#                        <div class="text-center">#}
+{#                            <a href="index.html">#}
+{#                                <span><img src="{% static 'users/images/google.png' %}" alt="" height="22"></span>#}
+{#                            </a>#}
+{#                            <p class="text-muted mt-2 mb-4">RESCATE I </p>#}
+{#                        </div>#}
+                        <div class="card" style="opacity: .85; background-color: #0b0b0b;">
+
+                            <div class="card-body p-5" >
+
+                                    <div class="form-group mb-0 text-center" >
+                                              <a class="btn bg-white text-black-50" href="{% url 'social:begin' 'google-oauth2' %}">
+                                                   <img width="30px" style="margin-right: 20px;" alt="Google &quot;G&quot; Logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png"/>
+                                                    Iniciar Sesion con Google</a>
+
+                                    </div>
+
+
+                                </form>
+
+                            </div> <!-- end card-body -->
+                        </div>
+                        <!-- end card -->
+
+                        <!-- end row -->
+
+                    </div> <!-- end col -->
+                </div>
+                <!-- end row -->
+            </div>
+            <!-- end container -->
+        </div>
+        <!-- end page -->
+
+
+        <!-- Vendor js -->
+               <script src="{% static 'dashboard/js/vendor.min.js' %}"></script>
+
+        <!-- App js -->
+         <script src="{% static 'dashboard/js/app.min.js' %}"></script>
+
+    </body>
 </html>
-<!-- Template US-14 -->
