--- a/Vostok/inventario/templates/inventario/ver_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_material_inventario.html
@@ -12,8 +12,9 @@
     <table class="table table-hover table-dark">
       <thead>
         <tr>
-          <th scope="col">Material</th>
-          <th scope="col">Cantidad</th>
+            <th scope="col">Material</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Eliminar</th>
         </tr>
       </thead>
     <tbody>
@@ -21,9 +22,9 @@
     {% for material in inventarios %}
 
         <tr>
-          <th scope="row">{{ material.material.nombre}}</td>
-          <td>{{ material.cantidad }}</th>
-
+            <td scope="row">{{ material.material.nombre}}</td>
+            <td>{{ material.cantidad }}</td>
+            <td><a href="/inventario/{{inventario_id}}/ver/material_inventario/{{material.id}}">Eliminar</a></td>
         </tr>
 
 
