--- a/Vostok/revision/templates/revision/ver_revisiones.html
+++ b/Vostok/revision/templates/revision/ver_revisiones.html
@@ -4,10 +4,8 @@
     <!--######## VIEW US41 ########-->
  <div class="card-box">
 
-                                    <h4 class="header-title">Inverse table</h4>
-                                    <p class="text-muted font-14 mb-3">
-                                        Your awesome text goes here.Your awesome text goes here.
-                                    </p>
+                                    <h2 >Historial de revisiones de inventarios</h2>
+                                    <br>
 
                                     <div class="table-responsive">
                                         <table class="table table-dark mb-0">
