--- a/Vostok/revision/templates/revision/ver_revisiones.html
+++ b/Vostok/revision/templates/revision/ver_revisiones.html
@@ -2,10 +2,13 @@
 {% load staticfiles %}
 {% block content %}
     <!--######## VIEW US41 ########-->
- <div class="card-box">
+
 
                                     <h2 >Historial de revisiones de inventarios</h2>
-                                    <br>
+
+    {% if  revisiones  %}
+         <div class="card-box">
+          <br>
 
                                     <div class="table-responsive">
                                         <table class="table table-dark mb-0">
@@ -18,7 +21,6 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-    {% if  revisiones  %}
         {% for revision in revisiones %}
 
              <tr>
@@ -30,12 +32,44 @@
              </tr>
 
         {% endfor %}
+         </div>
     {% else %}
 
+        <div class="account-pages mt-5 mb-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-8 col-lg-6 col-xl-5">
+
+                        <div class="card">
+
+                            <div class="card-body p-4">
+
+                                <div class="text-center">
+                                    <h1 class="text-error">500</h1>
+                                    <h3 class="mt-3 mb-2">Error de servidor</h3>
+                                    <p class="text-muted mb-3">No se encontro ninguna revision de esta ambulancia. Consultar a administrador </p>
+
+                                    <a href="/index/" ><i class="fas fa-home mr-1"></i> Regresar a ambulancias</a>
+                                </div>
+
+
+                            </div> <!-- end card-body -->
+                        </div>
+                        <!-- end card -->
+
+                    </div> <!-- end col -->
+                </div>
+                <!-- end row -->
+            </div>
+            <!-- end container -->
+        </div>
+        <!-- end page -->
 
 
 
-        <h1>No Sirvio</h1>
+
+
+
     {% endif %}
        </tbody>
                                         </table>
