--- a/Vostok/inventario/templates/inventario/ver_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_material_inventario.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-sm">
                     <div class="container-fluid">
-                        <h1> <i class="zmdi zmdi-shape"> </i>Inventario 1 </h1>
+                        <h1> <i class="zmdi zmdi-shape"> </i>Inventario {{inventario_id}} </h1>
                     </div>
                 </div>
                 <div class="col-sm">
@@ -29,7 +29,9 @@
         <tr>
             <th scope="col">Material</th>
             <th scope="col">Cantidad</th>
+            <th scope="col">Editar Cantidad</th>
             <th scope="col">Eliminar</th>
+
         </tr>
       </thead>
     <tbody>
@@ -38,7 +40,8 @@
 
         <tr>
             <td scope="row">{{ material.material.nombre}}</td>
-            <td>{{ material.cantidad }}</td>
+            <td>{{ material.cantidad }}
+            <td><a href="#editar-modal-{{ material.material }}" class="dropdown-item" data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a"><button>Editar</button></a></td>
             <td><button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalConfirmacion"><i class="fas fa-trash"></i></button></td>
         </tr>
 
@@ -56,7 +59,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                <a href="/inventario/{{inventario_id}}/ver/material_inventario/{{material.id}}"><button type="button" class="btn btn-primary">Aceptar</button></a>
+                <a href="/inventario/{{inventario_pk}}/ver/material_inventario/{{material.id}}"><button type="button" class="btn btn-primary">Aceptar</button></a>
               </div>
             </div>
           </div>
@@ -64,6 +67,32 @@
 
     {% endfor %}
     <!--  Template US-5  -->
+
+    {% for material in inventarios %}
+        <!-- US02 -->
+
+            <div id="editar-modal-{{ material.material }}" class="modal-demo">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <h4 class="custom-modal-title" id="titulo_inventario">Estas editando el material {{material.material}}</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="Custombox.modal.close();">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                        <form method="post" action="{% url "inventario:editar_cantidad_material"  inventario_id=inventario_pk material_id=material.material.id%}">
+                            {% csrf_token %}
+                            <div class="modal-body">
+                                {{ form.as_p}}
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" onclick="Custombox.modal.close();">Cancelar</button>
+                            <button type="submit" class="btn btn-primary">Guardar</button>
+                          </div>
+                        </form>
+                    </div>
+                  </div>
+            </div>
+        <!-- US02 -->
+        {% endfor %}
+
     </tbody>
     </table>
 
