--- a/Vostok/revision/templates/revision/ver_detalle_revision.html
+++ b/Vostok/revision/templates/revision/ver_detalle_revision.html
@@ -1,12 +1,17 @@
 {% extends 'dashboard/base.html' %}
 {% load staticfiles %}
 {% block content %}
-    <!--######## VIEW US41 ########-->
+    <!--######## VIEW US42 ########-->
 
 
-                                    <h2 >Historial de revisiones de inventarios</h2>
+                                    <h1 >Informacion de materiales en revision</h1>
 
-    {% if  revisiones  %}
+
+    {% if  materiales  %}
+        <h4 >Ambulancia: {{ ambulancia.nombre }}</h4>
+    <h4 >Fecha de revision: {{ fecha }}</h4>
+
+       <p align="right"><a href="{% url "revision:revisiones" id=ambulancia.id %}"><button  class="btn btn-primary btn-rounded width-md waves-effect waves-light">Regresar a revisiones</button></a></p>
          <div class="card-box">
           <br>
 
@@ -15,19 +20,19 @@
                                             <thead>
                                             <tr>
 
-                                                <th>Nombre</th>
-                                                <th>Fecha de Revision</th>
+                                                <th>Articulo</th>
+                                                <th>Cantidad</th>
 
                                             </tr>
                                             </thead>
                                             <tbody>
-        {% for revision in revisiones %}
+        {% for material in materiales %}
 
              <tr>
 
-                 <td>{{ ambulancia.nombre }}</td>
-                 <td>{{ revision.fecha }}</td>
-                 <td><a href="{{ revision.id }}"><button class="btn btn-primary btn-rounded width-md waves-effect waves-light">Ver detalle</button></a></td>
+                 <td>{{ material.material }}</td>
+                 <td>{{ material.cantidad }}</td>
+
 
              </tr>
 
@@ -47,9 +52,9 @@
                                 <div class="text-center">
                                     <h1 class="text-error">500</h1>
                                     <h3 class="mt-3 mb-2">Error de servidor</h3>
-                                    <p class="text-muted mb-3">No se encontro ninguna revision de esta ambulancia. Consultar a administrador </p>
+                                    <p class="text-muted mb-3">No se encuentran materiales de esta revision</p>
 
-                                    <a href="/index/" ><i class="fas fa-home mr-1"></i> Regresar a ambulancias</a>
+                                    <a href="{% url "revision:revisiones" id=ambulancia.id %}"><button class="btn btn-primary btn-rounded width-md waves-effect waves-light">Regresar a revisiones</button></a>
                                 </div>
 
 
@@ -75,6 +80,6 @@
                                         </table>
                                     </div>
                                 </div>
-    <!--######## VIEW US41 ########-->
+    <!--######## VIEW US421 ########-->
 
 {% endblock %}
