--- a/Vostok/inventario/templates/inventario/ver_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_material_inventario.html
@@ -16,13 +16,19 @@
                 </div>
                 <div class="col-sm">
                     <div  class="nav justify-content-end">
-                        <button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light ">Agregar material</button>
+                        <button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light "><i class="fas fa-plus"></i> Agregar material</button>
                     </div>
 
                 </div>
             </div>
-        </div>
-    </div>
+
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
 
     <table class="table table-hover table-dark">
       <thead>
@@ -41,7 +47,7 @@
         <tr>
             <td scope="row">{{ material.material.nombre}}</td>
             <td>{{ material.cantidad }}
-            <td><a href="#editar-modal-{{ material.material }}" class="dropdown-item" data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a"><button>Editar</button></a></td>
+            <td><a href="#editar-modal-{{ material.material }}" class="dropdown-item" data-animation="blur" data-plugin="custommodal" data-overlaycolor="#36404a"><button class="btn btn-success"><i class="fas fa-edit"></i></button></a></td>
             <td><button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalConfirmacion"><i class="fas fa-trash"></i></button></td>
         </tr>
 
@@ -91,6 +97,8 @@
                   </div>
             </div>
         <!-- US02 -->
+        </div>
+         </div>
         {% endfor %}
 
     </tbody>
