Finish US46 BE + FE

--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -28,6 +28,7 @@
                                 </tr>
                             {% endfor %}
                         </tbody>
+                    </table>
                 </div>
             </div>
         </div>
