Site map, linking apps together

--- a/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
@@ -67,7 +67,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Continuar editando</button>
-                  <a href="/index/" class="btn btn-primary">Salir sin guardar</a>
+                  <a href="{% url 'ambulancia:ver_ambulancias' %}" class="btn btn-primary">Salir sin guardar</a>
               </div>
             </div>
           </div>
