--- a/Vostok/inventario/templates/inventario/crear_inventario.html
+++ b/Vostok/inventario/templates/inventario/crear_inventario.html
@@ -33,11 +33,12 @@
         </div>
     {% endfor %}
 {% endif %}
-            <br>
-             <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+                    <br>
+                    <a href="{% url 'inventario:ver_inventario' %}" class="btn btn-dark">Regresar</a>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
              </div>
-    </div>
+        </div>
     </div>
 
 
