--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -44,7 +44,7 @@
         </tbody>
         </table>
         </div>
-            <a href="/inventario/crear/"><button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light">Añadir></button></a>
+            <a href="{% url 'inventario:crear_inventario' %}"><button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light">Añadir></button></a>
         </div>
 
         <!-- ##########View US03##### -->
