--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -8,8 +8,19 @@
     {% if user.is_authenticated %}
 
     <h1> <i class="zmdi zmdi-shape"> </i>Ver Material  </h1>
-       <div id="datatable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="datatable"></label></div>
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card-box">
+                    <div class="row">
+                        <div class="col-4">
+                            <br>
+                            <a href="{% url 'material:crear' %}"><button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light">Nuevo Material</button></a>
+                        </div>
+                        <div class="col-8">
+                            <div id="datatable_filter" class="dataTables_filter"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="datatable"></label></div>
+                        </div>
+                    </div>
 
     <table class="table table-hover table-dark">
     <tbody>
@@ -33,20 +44,20 @@
                     </div>
     <div class="row">
         <div class="col-sm-12">
-            <table id="datatable" class="table table-bordered dt-responsive nowrap dataTable no-footer dtr-inline collapsed" role="grid" aria-describedby="datatable_info" style="width: 1347px;">
+            <table id="datatable" class="table table-bordered dt-responsive nowrap dataTable no-footer dtr-inline collapsed" role="grid" aria-describedby="datatable_info">
 
                                         <thead>
                                         <tr role="row">
-                                            <th class="sorting_asc" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1" style="width: 222.4px;" aria-sort="ascending" aria-label="Name: activate to sort column descending">
+                                            <th scope="col">
                                                 Id
                                             </th>
-                                            <th class="sorting" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1" style="width: 328.4px;" aria-label="Position: activate to sort column ascending">
+                                            <th scope="col">
                                                 Nombre
                                             </th>
-                                            <th class="sorting" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1" style="width: 166.4px;" aria-label="Office: activate to sort column ascending">
-                                                Descripcion
+                                            <th scope="col">
+                                                Descripción
                                             </th>
-                                            <th class="sorting" tabindex="0" aria-controls="datatable" rowspan="1" colspan="1" style="width: 80px;" aria-label="Office: activate to sort column ascending">
+                                            <th scope="col">
                                                 Ajustes
                                             </th>
                                         </thead>
@@ -136,6 +147,12 @@
     </table>
                     </div> <!-- container-fluid -->
         </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 {% else %}
