--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -7,7 +7,10 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="card-box">
-
+                <div clas="row">
+                    <a href="{% url "ambulancia:crear" %}" type="button" class="btn btn-bordred-info waves-effect  width-md waves-light">Crear nueva ambulancia</a>
+                </div>
+                <br>
                     <table class="table table-hover table-dark">
                         <thead>
                             <tr>
